// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render UserBlock with authorization 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        src="https://htmlacademy-react-3.appspot.com/img/1.png"
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`Render UserBlock without authorization 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
